Correct background color and spacing in style.css
Fix typo in background color property and adjust spacing.

--- a/style.css
+++ b/style.css
@@ -307,6 +307,9 @@ main{
     color:#D8B4F3;
     background:rbga(216,180,254,.3);
     box-shadow: 0 0 18px rgba(216,180,254,.6);}
+
+.social-links a i{
+    font-size:26px;}
     
 /*RIGHT SIDE*/
 .contact-form{
